--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bulma": "^0.9.4",
+    "sweetalert2": "^11.7.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
